<resources>
    <string name="app_name">CoffeeStorage</string>
    <!-- Strings related to login -->
    <string name="view_mail">Enter E-Mail or Username</string>
    <string name="view_pass">Enter the password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="radio_user">User</string>
    <string name="radio_admin">Admin</string>
    <string name="title_activity_login">Sign in</string>
    <string name="view_name">Enter first name</string>
    <string name="view_lastname">Enter last name</string>
    <string name="mail_register">E-mail or username</string>
    <string name="button_saveRegister">Save</string>
    <!-- Strings related to menu -->
    <string name="button_storage">Storage</string>
    <string name="button_plantation">Plantation</string>
    <string name="button_settings">Settings</string>
    <string name="button_logOut">Logout</string>
    <string name="action_Profile">Profile</string>

    <!-- Strings related to storage -->
    <string name="button_storage_edit">Edit Storage</string>
    <string name="button_storage_add">Add Storage</string>
    <string name="button_storage_show">Show storage</string>
    <string name="storage_type">Chose type</string>
    <string name="storage_amount">Enter amount</string>
    <string name="storage_date">Enter date</string>
    <string name="storage_save">Save</string>
    <string name="storage_qr">Qr Scanner</string>
    <string name="add_storage_button">Add Storage</string>

    <!-- Strings related to storage -->
    <string name="plantation_type">Chose type</string>
    <string name="plantation_hectare">Enter hectare</string>
    <string name="plantation_date">Enter date</string>
    <string name="plantation_add">Save</string>

    <!-- Strings related to storage -->
    <string name="button_plantation_edit">Edit Plantation</string>
    <string name="button_plantation_add">Add Plantation</string>
    <string name="button_plantation_show">Show Plantation</string>


    <!-- Strings related to type -->
    <string-array name="types_array">
        <item>Arabica</item>
        <item>Robusta</item>
        <item>Liberica</item>
    </string-array>

    <!--RElated to storage view-->
    <string name="storage_filter">Filter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!--settings-->
    <string-array name="listArray">
        <item>Englisch</item>
        <item>Deutsch</item>
    </string-array>
    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="about">About</string>
    <string name="info">This app has been created from Agron Asani and Yann Jollien ©</string>


</resources>
