<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b70d0d"
    android:orientation="vertical"
    tools:context=".ui.plantation.PlantationAddActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/plantation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#790000"
        android:elevation="4dp"
        android:theme="@style/ToolBarStyle"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:text="@string/plantation_type"
        android:textColor="#ffffff" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:text="@string/plantation_hectare"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/add_hectare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="In ha"
        android:inputType="numberDecimal"
        android:textColor="#ffffff"
        android:textColorHint="#999999" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:text="@string/plantation_date"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/add_date"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="dd.mm.yyyy"
            android:textColor="#ffffff"
            android:textColorHint="#999999" />

        <Button
            android:id="@+id/date_choser"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_date_range_white_24dp" />

    </LinearLayout>

    <Button
        android:id="@+id/save_add_plantation"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_button"
        android:text="@string/plantation_add" />

</LinearLayout>