<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.storage.StorageAddActivity"
    android:orientation="vertical"
    android:background="@drawable/add_edit_image">

    <android.support.v7.widget.Toolbar
        android:id="@+id/storage_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff"
        android:text="@string/storage_type" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff"
        android:text="@string/storage_amount" />

    <EditText
        android:id="@+id/add_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="In kg"
        android:textColorHint="#999999"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textColor="#ffffff"
        android:layout_marginRight="5dp"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff"
        android:text="@string/storage_date" />

    <EditText
        android:id="@+id/add_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColorHint="#999999"
        android:textColor="#ffffff"
        android:hint="dd.mm.yyyy"
        android:ems="10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_add_storage"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:textColor="#b70f0f"
            android:background="@android:color/white"
            android:text="@string/storage_save" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="#b70f0f"
            android:background="@android:color/white"
            android:text="Cancel" />
    </LinearLayout>

</LinearLayout>